# robot_logic

coord_interfaces/: CMakeLists.txt  package.xml
coord_interfaces/msg/: CoordTask.msg  RawDetection.msg
robot_logic/: setup.py
robot_logic/launch/: coordination.launch.py
robot_logic/robot_logic/: center_node.py  detector_node.py  executor_node.py
